[tool.poetry]
name = "starlaunch"
version = "1.0.0"
description = "A tool to create, configure, and launch isolated Starbound instances."
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
starlaunch = "starlaunch.main:main"
